--- a/templates/sudoers.entry.erb
+++ b/templates/sudoers.entry.erb
@@ -49,6 +49,10 @@ Cmnd_Alias <%= alias_name.upcase %> = <%= cmnd_alias %>
 <% if !cmnd_alias.empty? -%>
 <%= alias_name.upcase %>
 <% else -%>
+<% if command.is_a? Array -%>
+<%= command.join(", ") %>
+<% else -%>
 <%= command %>
+<% end -%>
 <% end -%>
 <% end -%>
